added the about section

--- a/index.html
+++ b/index.html
@@ -40,15 +40,37 @@
 
     <section class="about">
       <div class="about__contents">
-        <div class="contents__text">
-          <span class="contents__text--main">Grow Together</span>
-          <span class="contents__text--sub">Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</span>
+        <div class="about__contents__text">
+          <h1 class="about__contents__text--main mb-sm">Grow Together</h1>
+          <p class="about__contents__text--sub">Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
         </div>
 
         <div class="about__images">
           <img src="/images/illustration-grow-together.svg" alt="Grow together" class="about__image">
         </div>
       </div>
+
+      <div class="about__contents">
+        <div class="about__images">
+          <img src="/images/illustration-flowing-conversation.svg" alt="Flowing Conversations" class="about__image">
+        </div>
+        <div class="about__contents__text">
+          <h1 class="about__contents__text--main mb-sm">Flowing Conversations</h1>
+          <p class="about__contents__text--sub">You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+        </div>
+      </div>
+
+      <div class="about__contents">
+        <div class="about__contents__text">
+          <h1 class="about__contents__text--main mb-sm">Your Users</h1>
+          <p class="about__contents__text--sub">It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+        </div>
+
+        <div class="about__images">
+          <img src="/images/illustration-your-users.svg" alt="Your users" class="about__image">
+        </div>
+      </div>
+
     </section>
 
   </main>
